<resources>
    <string name="app_name">CÁI NÀY LÀ APP CỦA HONDA NHA</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_suachua">Sửa chữa</string>
    <string name="nav_sanpham">Sản phẩm</string>
    <string name="nav_product">Sản phẩm</string>
    <string name="nav_service">Dịch vụ</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_setting">Tùy chỉnh</string>
    <string name="test">Artifacts within the androidx namespace comprise the Android Jetpack libraries. Like the Support Library, libraries in theandroidx namespace ship separately from the Android platform and provide backward compatibility across Android releases.

AndroidX is a major improvement to the original Android Support Library, which is no longer maintained. androidx packages fully replace the Support Library by providing feature parity and new libraries.

In addition, AndroidX includes the following features:

All packages in AndroidX live in a consistent namespace starting with the string androidx. The Support Library packages have been mapped into corresponding androidx.* packages. For a full mapping of all the old classes and build artifacts to the new ones, see the Package Refactoring page.

Unlike the Support Library, androidx packages are separately maintained and updated. The androidx packages use strict Semantic Versioning, starting with version 1.0.0. You can update AndroidX libraries in your project independently.

Version 28.0.0 is the last release of the Support Library. There will be no more android.support library releases. All new feature development will be in the androidx namespace.

Using androidx libraries in your project
See Migrating to AndroidX to learn how to migrate an existing project.

If you want to use androidx-namespaced libraries in a new project, you need to set the compile SDK to Android 9.0 (API level 28) or higher and set both of the following Android Gradle plugin flags to true in your gradle.properties file.

android.useAndroidX: When this flag is set to true, the Android plugin uses the appropriate AndroidX library instead of a Support Library. The flag is false by default if it is not specified.
android.enableJetifier: When this flag is set to true, the Android plugin automatically migrates existing third-party libraries to use AndroidX dependencies by rewriting their binaries. The flag is false by default if it is not specified.
API Reference
All the packages and classes in the androidx namespace can be found in the AndroidX reference section.

Additional Resources
Learn more about components on the Jetpack home page. For more information about the package refactoring from the Support Library to androidx, see the blog post on that topic.
    Artifacts within the androidx namespace comprise the Android Jetpack libraries. Like the Support Library, libraries in theandroidx namespace ship separately from the Android platform and provide backward compatibility across Android releases.

AndroidX is a major improvement to the original Android Support Library, which is no longer maintained. androidx packages fully replace the Support Library by providing feature parity and new libraries.

In addition, AndroidX includes the following features:

All packages in AndroidX live in a consistent namespace starting with the string androidx. The Support Library packages have been mapped into corresponding androidx.* packages. For a full mapping of all the old classes and build artifacts to the new ones, see the Package Refactoring page.

Unlike the Support Library, androidx packages are separately maintained and updated. The androidx packages use strict Semantic Versioning, starting with version 1.0.0. You can update AndroidX libraries in your project independently.

Version 28.0.0 is the last release of the Support Library. There will be no more android.support library releases. All new feature development will be in the androidx namespace.

Using androidx libraries in your project
See Migrating to AndroidX to learn how to migrate an existing project.

If you want to use androidx-namespaced libraries in a new project, you need to set the compile SDK to Android 9.0 (API level 28) or higher and set both of the following Android Gradle plugin flags to true in your gradle.properties file.

android.useAndroidX: When this flag is set to true, the Android plugin uses the appropriate AndroidX library instead of a Support Library. The flag is false by default if it is not specified.
android.enableJetifier: When this flag is set to true, the Android plugin automatically migrates existing third-party libraries to use AndroidX dependencies by rewriting their binaries. The flag is false by default if it is not specified.
API Reference
All the packages and classes in the androidx namespace can be found in the AndroidX reference section.

Additional Resources
Learn more about components on the Jetpack home page. For more information about the package refactoring from the Support Library to androidx, see the blog post on that topic.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dichvu">Sữa chữa \&amp; bảo hành </string>
    <string name="title_damua">Danh sách xe đã mua </string>
    <string name="title_sanpham">Sản phẩm</string>
    <string name="title_home">Trang chính</string>
    <string name="title_setting">Cài đặt</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="quen_mat_khau"><u>Quên mật khẩu?</u></string>
</resources>
